# facelock

./: .dockerignore  .editorconfig  .gitignore  .packit.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md  SECURITY.md  justfile  renovate.json
.copr/: Makefile
.github/: PULL_REQUEST_TEMPLATE.md  renovate.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  pages.yml  release.yml
.internal/docs/: TODO-tensorrt.md
book/: book.toml
book/src/: SUMMARY.md  architecture.md  cli-reference.md  compatibility.md  configuration.md  contracts.md  contributing.md  gpu.md  introduction.md  quickstart.md  security.md  testing.md  troubleshooting.md
config/: facelock.toml  howdy.toml  visage.toml
config/quirks.d/: 00-defaults.toml
crates/facelock-bench/: Cargo.toml
crates/facelock-bench/src/: main.rs
crates/facelock-camera/: Cargo.toml
crates/facelock-camera/src/: capture.rs  device.rs  ir_emitter.rs  lib.rs  preprocess.rs  quirks.rs
crates/facelock-cli/: Cargo.toml
crates/facelock-cli/src/: direct.rs  i18n.rs  ipc_client.rs  main.rs  notifications.rs
crates/facelock-cli/src/commands/: audit.rs  auth.rs  bench.rs  clear.rs  config.rs  daemon.rs  devices.rs  encrypt.rs  enroll.rs  list.rs  mod.rs  remove.rs  setup.rs  status.rs  test_cmd.rs  tpm.rs
crates/facelock-cli/src/commands/preview/: font.rs  mod.rs  render.rs  text_only.rs  wayland_preview.rs
crates/facelock-cli/tests/: cli_smoke.rs
crates/facelock-core/: Cargo.toml
crates/facelock-core/src/: config.rs  dbus_interface.rs  error.rs  fs_security.rs  ipc.rs  lib.rs  paths.rs  traits.rs  types.rs
crates/facelock-core/tests/: dbus_types_test.rs  ipc_integration.rs
crates/facelock-daemon/: Cargo.toml
crates/facelock-daemon/src/: audit.rs  auth.rs  enroll.rs  handler.rs  lib.rs  liveness.rs  quality.rs  rate_limit.rs
crates/facelock-daemon/tests/: daemon_integration.rs
crates/facelock-face/: Cargo.toml
crates/facelock-face/src/: align.rs  detector.rs  embedder.rs  lib.rs  models.rs  provider.rs
crates/facelock-face/tests/: engine_integration.rs
crates/facelock-polkit/: Cargo.toml
crates/facelock-polkit/src/: main.rs
crates/facelock-store/: Cargo.toml
crates/facelock-store/src/: db.rs  migrations.rs
crates/facelock-store/tests/: store_integration.rs
crates/facelock-test-support/: Cargo.toml
crates/facelock-tpm/: Cargo.toml
crates/facelock-tpm/src/: lib.rs  pcr.rs  sealing.rs
crates/howdy-bench/: Cargo.toml
crates/howdy-bench/src/: main.rs
crates/howdy-camera/: Cargo.toml
crates/howdy-cli/: Cargo.toml
crates/howdy-cli/src/: ipc_client.rs  main.rs  notifications.rs
crates/howdy-cli/src/commands/: clear.rs  config.rs  devices.rs  enroll.rs  list.rs  mod.rs  preview.rs  remove.rs  setup.rs  status.rs  test_cmd.rs
crates/howdy-cli/src/commands/preview/: mod.rs  render.rs  text_only.rs  wayland_preview.rs
crates/howdy-cli/tests/: cli_smoke.rs
crates/howdy-core/: Cargo.toml
crates/howdy-daemon/: Cargo.toml
crates/howdy-daemon/src/: auth.rs  enroll.rs  handler.rs  main.rs
crates/howdy-face/: Cargo.toml
crates/howdy-face/src/: align.rs  detector.rs  embedder.rs  lib.rs  models.rs
crates/howdy-face/tests/: engine_integration.rs
crates/howdy-store/: Cargo.toml
crates/pam-facelock/: Cargo.toml
crates/pam-facelock/src/: lib.rs
crates/pam-howdy/: Cargo.toml
crates/pam-visage/: Cargo.toml
crates/visage-bench/: Cargo.toml
crates/visage-bench/src/: main.rs
crates/visage-camera/: Cargo.toml
crates/visage-cli/: Cargo.toml
crates/visage-cli/src/: direct.rs  ipc_client.rs  main.rs  notifications.rs
crates/visage-cli/src/commands/: auth.rs  bench.rs  clear.rs  config.rs  daemon.rs  devices.rs  enroll.rs  list.rs  mod.rs  remove.rs  setup.rs  status.rs  test_cmd.rs  tpm.rs
crates/visage-cli/src/commands/preview/: mod.rs  text_only.rs  wayland_preview.rs
crates/visage-cli/tests/: cli_smoke.rs
crates/visage-core/: Cargo.toml
crates/visage-daemon/: Cargo.toml
crates/visage-daemon/src/: auth.rs  auth_oneshot.rs  enroll.rs  handler.rs  lib.rs  main.rs  rate_limit.rs
crates/visage-daemon/tests/: daemon_integration.rs
crates/visage-face/: Cargo.toml
crates/visage-face/src/: align.rs  detector.rs  embedder.rs  lib.rs  models.rs
crates/visage-face/tests/: engine_integration.rs
crates/visage-store/: Cargo.toml
crates/visage-store/src/: db.rs  migrations.rs
crates/visage-store/tests/: store_integration.rs
crates/visage-test-support/: Cargo.toml
crates/visage-tpm/: Cargo.toml
dbus/: org.facelock.Daemon.conf  org.facelock.Daemon.service
dev/: config.toml
docs/: TODO-integration-tests.md  TODO-model-hosting.md  architecture.md  cli.md  compatibility.md  configuration.md  contracts.md  contributing.md  delivery-roadmap.md  quickstart.md  releasing.md  risk-register.md  security.md  testing-roadmap.md  testing-safety.md  troubleshooting.md
man/: facelock.1  pam_facelock.8
models/: NOTICE.md  manifest.toml
po/: facelock.pot  pam_facelock.pot
polkit/: org.facelock.AuthAgent.desktop
specs/: 00-workspace.md  01-core-types.md  02-camera.md  03-face-engine.md  04-face-store.md  05-daemon.md  06-pam-module.md  07-cli.md  08-preview.md  09-notifications.md  10-build-install.md  11-benchmarks.md  12-integration-tests.md  20-hardcoded-paths.md  21-model-selection.md  22-gpu-acceleration.md  23-unified-binary.md  24-systemd-setup.md  25-tpm-verification.md  26-pam-install.md  27-workspace-cleanup.md
systemd/: facelock-daemon.service  facelock-daemon.socket  howdy-daemon.service  visage-daemon.service  visage-daemon.socket
templates/: benchmark-report.md  spec-execution-report.md
test/: Containerfile  Containerfile.copr  Containerfile.deb-e2e  Containerfile.deb-tpm-e2e  Containerfile.fedora  Containerfile.rpm-e2e  Containerfile.ubuntu  build-rpm-prebuilt.sh  container-config.toml  copr-build.sh  pkg-validate.sh  run-container-tests.sh  run-integration-tests.sh  run-oneshot-tests.sh  run-tests.sh
website/: index.html  style.css
(+64 files in other folders)
