[workspace]
resolver = "2"
members = [
    "crates/visage-core",
    "crates/visage-camera",
    "crates/visage-face",
    "crates/visage-store",
    "crates/visage-daemon",
    "crates/visage-cli",
    "crates/pam-visage",
    "crates/visage-test-support",
    "crates/visage-tpm",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bincode = "2.0.0-rc.3"

[profile.release]
lto = true
codegen-units = 1
strip = true
