[workspace]
resolver = "2"
members = [
    "crates/facelock-core",
    "crates/facelock-camera",
    "crates/facelock-face",
    "crates/facelock-store",
    "crates/facelock-daemon",
    "crates/facelock-cli",
    "crates/pam-facelock",
    "crates/facelock-test-support",
    "crates/facelock-tpm",
    "crates/facelock-polkit",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tss-esapi = "8.0.0-alpha.2"

[profile.release]
lto = true
codegen-units = 1
strip = true
