[package]
name = "facelock-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "facelock"
path = "src/main.rs"

[dependencies]
facelock-core = { path = "../facelock-core" }
facelock-camera = { path = "../facelock-camera" }
facelock-face = { path = "../facelock-face" }
facelock-store = { path = "../facelock-store" }
facelock-daemon = { path = "../facelock-daemon" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
sha2 = "0.10"
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
smithay-client-toolkit = { version = "0.20", optional = true }
wayland-client = { version = "0.31", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
xkbcommon = { version = "0.8", optional = true }
dialoguer = "0.11"
signal-hook = "0.3"
libc = "0.2"
nix = { version = "0.29", features = ["user"] }
facelock-tpm = { path = "../facelock-tpm" }
zbus = { version = "5", default-features = false, features = ["tokio", "blocking-api"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
futures-util = "0.3"
caps = "0.5"
tss-esapi = { workspace = true, optional = true }

[features]
default = ["wayland"]
wayland = ["dep:smithay-client-toolkit", "dep:wayland-client", "dep:xkbcommon"]
tpm = ["facelock-tpm/tpm", "dep:tss-esapi"]
