[package]
name = "facelock-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
bincode = { workspace = true }
subtle = "2"
zvariant = { version = "5", default-features = false, features = ["enumflags2"] }

[dev-dependencies]
zvariant = { version = "5", default-features = false, features = ["enumflags2"] }
