[package]
name = "facelock-tpm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
facelock-core = { path = "../facelock-core" }
tracing.workspace = true
tss-esapi = { workspace = true, optional = true }
serde = { workspace = true }
zeroize = "1"
aes-gcm = "0.10"
rand = "0.8"

[dev-dependencies]
serde_json = "1"

[features]
tpm = ["dep:tss-esapi"]
