[package]
name = "howdy-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "howdy"
path = "src/main.rs"

[dependencies]
howdy-core = { path = "../howdy-core" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
