[package]
name = "howdy-cli"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "howdy"
path = "src/main.rs"

[dependencies]
howdy-core = { path = "../howdy-core" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
notify-rust = "4"
sha2 = "0.10"
serde = { workspace = true }
toml = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
