[package]
name = "howdy-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "howdy-daemon"
path = "src/main.rs"

[dependencies]
howdy-core = { path = "../howdy-core" }
howdy-camera = { path = "../howdy-camera" }
howdy-face = { path = "../howdy-face" }
howdy-store = { path = "../howdy-store" }
signal-hook = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
nix = { version = "0.29", features = ["socket", "user", "fs"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
