[package]
name = "visage-bench"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "visage-bench"
path = "src/main.rs"

[dependencies]
visage-core = { path = "../visage-core" }
visage-camera = { path = "../visage-camera" }
visage-face = { path = "../visage-face" }
visage-store = { path = "../visage-store" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
