[package]
name = "visage-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "visage"
path = "src/main.rs"

[dependencies]
visage-core = { path = "../visage-core" }
visage-camera = { path = "../visage-camera" }
visage-face = { path = "../visage-face" }
visage-store = { path = "../visage-store" }
clap = { version = "4", features = ["derive"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
indicatif = "0.17"
reqwest = { version = "0.12", features = ["blocking"] }
notify-rust = "4"
sha2 = "0.10"
serde = { workspace = true }
serde_json = "1"
toml = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
smithay-client-toolkit = { version = "0.20", optional = true }
wayland-client = { version = "0.31", optional = true }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
xkbcommon = { version = "0.8", optional = true }
signal-hook = "0.3"
libc = "0.2"

[features]
default = ["wayland"]
wayland = ["dep:smithay-client-toolkit", "dep:wayland-client", "dep:xkbcommon"]
