[package]
name = "visage-daemon"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "visage-daemon"
path = "src/main.rs"

[[bin]]
name = "visage-auth"
path = "src/auth_oneshot.rs"

[dependencies]
visage-core = { path = "../visage-core" }
visage-camera = { path = "../visage-camera" }
visage-face = { path = "../visage-face" }
visage-store = { path = "../visage-store" }
signal-hook = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
nix = { version = "0.29", features = ["socket", "user", "fs"] }
image = { version = "0.25", default-features = false, features = ["jpeg"] }
visage-tpm = { path = "../visage-tpm", optional = true }

[features]
tpm = ["dep:visage-tpm"]

[dev-dependencies]
visage-test-support = { path = "../visage-test-support" }
