[package]
name = "visage-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
visage-core = { path = "../visage-core" }
rusqlite = { version = "0.32", features = ["bundled"] }
bytemuck = { version = "1", features = ["derive"] }
